---------------------------------- 2025-08-31 20:15:18 25.8.31
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-08-31 21:15:13 25.8.31
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-09-01 22:02:24 25.9.1
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2025-09-01 22:45:31 25.9.1
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-09-03 14:19:10 25.9.3
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-09-03 14:57:26 25.9.3
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-09-10 05:16:12 25.9.10
no qc pass: wireguard over ipv4
failed: wireguard over ipv4
---------------------------------- 2025-09-10 06:33:02 25.9.10
no failed: wireguard over ipv4
qc pass: wireguard over ipv4
---------------------------------- 2025-09-16 16:50:55 25.9.16
no qc pass: wireguard over ipv4
failed: wireguard over ipv4
---------------------------------- 2025-09-16 17:26:09 25.9.16
no failed: wireguard over ipv4
qc pass: wireguard over ipv4
---------------------------------- 2025-09-22 00:11:28 25.9.22
no todo: terminal clear same as game clear
---------------------------------- 2025-09-27 04:57:55 25.9.27
no todo: config committed with check for saved and backup config
no todo: configure startup to have config committed but 4 now, only conf start tabbable stuffs
---------------------------------- 2025-09-27 07:57:54 25.9.27
qc pass: l3evpns over srv6 over ebgp
qc pass: l3evpns over srv6 over ibgp
qc pass: l3evpns over srv6 over ibgp rr
qc pass: l3evpns over srv6 over confed bgp
qc pass: l3evpns over srv6 over bgp route server
qc pass: l3evpns over srv6 over bgp with soft-reconfig
qc pass: l3evpns over srv6 over bgp additional path