@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.9.27-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-09-27 08:11:52, took 00:13:58, with 50 workers, on 4045 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2025-09-27 08:40:31, took 00:13:48, with 50 workers, on 4052 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3506,6 +3506,13 @@ http://sources.freertr.org/cfg/rout-bgp904.tst;rout-bgp904.tst;success;l3evpns o
 http://sources.freertr.org/cfg/rout-bgp905.tst;rout-bgp905.tst;success;l3evpns over srv6 over bgp route server
 http://sources.freertr.org/cfg/rout-bgp906.tst;rout-bgp906.tst;success;l3evpns over srv6 over bgp with soft-reconfig
 http://sources.freertr.org/cfg/rout-bgp907.tst;rout-bgp907.tst;success;l3evpns over srv6 over bgp additional path
+http://sources.freertr.org/cfg/rout-bgp908.tst;rout-bgp908.tst;success;l3otherevpns over srv6 over ebgp
+http://sources.freertr.org/cfg/rout-bgp909.tst;rout-bgp909.tst;success;l3eothervpns over srv6 over ibgp
+http://sources.freertr.org/cfg/rout-bgp910.tst;rout-bgp910.tst;success;l3otherevpns over srv6 over ibgp rr
+http://sources.freertr.org/cfg/rout-bgp911.tst;rout-bgp911.tst;success;l3otherevpns over srv6 over confed bgp
+http://sources.freertr.org/cfg/rout-bgp912.tst;rout-bgp912.tst;success;l3otherevpns over srv6 over bgp route server
+http://sources.freertr.org/cfg/rout-bgp913.tst;rout-bgp913.tst;success;l3otherevpns over srv6 over bgp with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp914.tst;rout-bgp914.tst;success;l3otherevpns over srv6 over bgp additional path
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
