@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.9.27-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-27 08:11:52, took 00:13:58, with 50 workers, on 4045 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-09-27 08:40:31, took 00:13:48, with 50 workers, on 4052 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3518,6 +3518,13 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp905.tst">rout-bgp905.tst</a></td><td>success</td><td>l3evpns over srv6 over bgp route server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp906.tst">rout-bgp906.tst</a></td><td>success</td><td>l3evpns over srv6 over bgp with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp907.tst">rout-bgp907.tst</a></td><td>success</td><td>l3evpns over srv6 over bgp additional path</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp908.tst">rout-bgp908.tst</a></td><td>success</td><td>l3otherevpns over srv6 over ebgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp909.tst">rout-bgp909.tst</a></td><td>success</td><td>l3eothervpns over srv6 over ibgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp910.tst">rout-bgp910.tst</a></td><td>success</td><td>l3otherevpns over srv6 over ibgp rr</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp911.tst">rout-bgp911.tst</a></td><td>success</td><td>l3otherevpns over srv6 over confed bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp912.tst">rout-bgp912.tst</a></td><td>success</td><td>l3otherevpns over srv6 over bgp route server</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp913.tst">rout-bgp913.tst</a></td><td>success</td><td>l3otherevpns over srv6 over bgp with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp914.tst">rout-bgp914.tst</a></td><td>success</td><td>l3otherevpns over srv6 over bgp additional path</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
