@@ -17541,3 +17541,11 @@ qc pass: l3evpns over srv6 over confed bgp
 qc pass: l3evpns over srv6 over bgp route server
 qc pass: l3evpns over srv6 over bgp with soft-reconfig
 qc pass: l3evpns over srv6 over bgp additional path
+---------------------------------- 2025-09-27 08:26:43 25.9.27
+qc pass: l3otherevpns over srv6 over ebgp
+qc pass: l3eothervpns over srv6 over ibgp
+qc pass: l3otherevpns over srv6 over ibgp rr
+qc pass: l3otherevpns over srv6 over confed bgp
+qc pass: l3otherevpns over srv6 over bgp route server
+qc pass: l3otherevpns over srv6 over bgp with soft-reconfig
+qc pass: l3otherevpns over srv6 over bgp additional path
